--- a/public/css/fremilyLogin.css
+++ b/public/css/fremilyLogin.css
@@ -1,13 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/*
-    Created on : 14/03/2015, 14:19:30
-    Author     : Barak
-*/
-
 .loginFields{
     color: #E08917;
     font-family: cursive;
@@ -49,7 +39,7 @@ and open the template in the editor.
 
 #signUpTable, 
 #childreninfo{
-    border-collapse: separate;
+    border-collapse: initial;
     border-spacing: 55px 25px;
     display: none;
 }
@@ -60,14 +50,14 @@ and open the template in the editor.
 
 #familyTypeTable{
     border-collapse: separate;
-    border-spacing: 20px 5px;
+    border-spacing: 25px 15px;
 }
 
 .titles{
     font-size: 30px;
     font-family: cursive;
     position: absolute;
-    left: 25%;
+    left: 38%;
 }
 
 .subtitles{
@@ -81,7 +71,7 @@ and open the template in the editor.
   font-size: 15px;
   font-family: cursive;
   position: absolute;
-  left: 20%;
+  left: 33%;
 }
 
 #nextButton{
@@ -107,12 +97,32 @@ and open the template in the editor.
 }
 
 #familyname{
-  color: chocolate;
-  font-size: 25px;
-  font-family: cursive;
-  position: absolute;
-  left: 15%;
-  top: 25%;
+    color: chocolate;
+    font-size: 25px;
+    font-family: cursive;
+    position: absolute;
+    left: 15%;
+    top: 25%;
 }
 
 select { font-size:16px; }
+
+#onlyemail
+{
+    text-align: center;
+    font-size: 20px;
+    font-family: cursive;
+}
+
+#forgotpswdbutton{
+    background-color: #E08917;
+    padding: 3px 30px;
+    font: 14px sans-serif;
+    border: 2px solid #000;
+    border-color: #aaa #444 #444 #aaa;
+}
+
+#errorlocation{
+    left:10%;
+    color: red;
+}
